# Paz

./: .gitignore  CMakeLists.txt  test.cpp
docs/: config
docs/html/: annotated.html  annotated_dup.js  classes.html  classpaz_1_1impl_1_1pt_1_1PhaseManager-members.html  classpaz_1_1impl_1_1pt_1_1PhaseManager.html  classpaz_1_1impl_1_1pt_1_1PhaseManager.js  classpaz_1_1impl_1_1pt_1_1PomodoroTimer-members.html  classpaz_1_1impl_1_1pt_1_1PomodoroTimer.html  classpaz_1_1impl_1_1pt_1_1TimerEngine-members.html  classpaz_1_1impl_1_1pt_1_1TimerEngine.html  classpaz_1_1impl_1_1pt_1_1TimerEngine.js  classpaz_1_1ui_1_1MainWindow-members.html  classpaz_1_1ui_1_1MainWindow.html  classpaz_1_1ui_1_1pt_1_1PomodoroTimerWidget-members.html  classpaz_1_1ui_1_1pt_1_1PomodoroTimerWidget.html  constants_8hpp_source.html  dir_3808e3f8fe545b07b1d2715928fb0eea.html  dir_3808e3f8fe545b07b1d2715928fb0eea.js  dir_4130d1f470c90cde883631331ae3f501.html  dir_4130d1f470c90cde883631331ae3f501.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_aebb8dcc11953d78e620bbef0b9e2183.js  dir_d52b542c496a4a5abb57f914a94a5efa.html  dir_d52b542c496a4a5abb57f914a94a5efa.js  dir_da5c6b39c0a2f54e57df6799511cd3ab.html  dir_da5c6b39c0a2f54e57df6799511cd3ab.js  doxygen_crawl.html  enums_8hpp_source.html  files.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  main-window_8hpp_source.html  menudata.js  namespacepaz.html  namespacepaz.js  (+18 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_1.js  classes_2.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  namespaces_0.js  searchdata.js
docs/latex/: annotated.tex  classpaz_1_1impl_1_1pt_1_1PhaseManager.eps  classpaz_1_1impl_1_1pt_1_1PhaseManager.tex  classpaz_1_1impl_1_1pt_1_1PomodoroTimer.eps  classpaz_1_1impl_1_1pt_1_1PomodoroTimer.tex  classpaz_1_1impl_1_1pt_1_1TimerEngine.eps  classpaz_1_1impl_1_1pt_1_1TimerEngine.tex  classpaz_1_1ui_1_1MainWindow.eps  classpaz_1_1ui_1_1MainWindow.tex  classpaz_1_1ui_1_1pt_1_1PomodoroTimerWidget.eps  classpaz_1_1ui_1_1pt_1_1PomodoroTimerWidget.tex  constants_8hpp_source.tex  enums_8hpp_source.tex  files.tex  hierarchy.tex  main-window_8hpp_source.tex  namespacepaz.tex  namespacepaz_1_1impl_1_1pt.tex  namespacepaz_1_1impl_1_1pt_1_1defaults.tex  namespacepaz_1_1impl_1_1pt_1_1limits.tex  namespacepaz_1_1impl_1_1utils.tex  namespacepaz_1_1ui.tex  namespacepaz_1_1ui_1_1pt.tex  namespaces.tex  phase-manager_8hpp_source.tex  pomodoro-timer-widget_8hpp_source.tex  pomodoro-timer_8hpp_source.tex  refman.tex  timer-engine_8hpp_source.tex  utility_8hpp_source.tex
src/: CMakeLists.txt  main.cpp  main.cxx
src/backend/: CMakeLists.txt  pomodoro-timer-backend.cpp  pomodoro-timer-backend.hpp  timer-phase.cpp  timer-phase.hpp
src/backend/pomodor-timer/: session-manager.cpp  timer-engine.hpp  timer-phase.hpp
src/backend/pomodoro-timer/: phase-manager.cpp  phase-manager.hpp  pomodoro-manager.hpp  pomodoro-phase.cpp  pomodoro-phase.hpp  session-manager.cpp  session-manager.hpp  state.cpp  state.hpp  timer-engine.cpp  timer-engine.hpp  timer-phase.cpp  timer-phase.hpp
src/core/: CMakeLists.txt  basic-types-aliases.hpp  constants.cpp  constants.hpp  core  enums.cpp  enums.hpp
src/impl/: CMakeLists.txt  afk-timer.cpp  afk-timer.hpp  main-window.cpp  main-window.hpp  pomodoro-calculator.cpp  pomodoro-calculator.hpp  pomodoro-stats.cpp  pomodoro-stats.hpp  pomodoro-timer.cpp  pomodoro-timer.hpp  qml-registration.hpp  settings-manager.cpp  settings-manager.hpp  settings.cpp  settings.hpp  test.cc  test.hpp
src/impl/pomodoro-timer/: phase-manager.cpp  phase-manager.hpp  pomodoro-manager.cpp  pomodoro-manager.hpp  pomodoro-timer.cpp  pomodoro-timer.hpp  timer-engine.cpp  timer-engine.hpp
src/logging/: CMakeLists.txt
src/ui/: CMakeLists.txt  main-window.cpp  main-window.hpp  pomodoro-timer-widget.cpp  pomodoro-timer-widget.hpp
src/ui/pomodoro-timer/: pomodoro-timer-widget.cpp  pomodoro-timer-widget.hpp
src/ui/qml/: Main.qml  PomodoroTimerWidget.qml  SettingsPage.qml  Sidebar.qml  TimerPage.qml
test/: CMakeLists.txt
themes/default/: style.qss
